src/web/themes/custom/bcgov_teachers/scss/paragraph/_paragraph_simple.scss
.paragraph--type--paragraph-simple {
  img {
    display: inline-block;

    &.align-right {
      margin-bottom: 30px;
      margin-left: 30px;
    }

    &.align-left {
      margin-bottom: 30px;
      margin-right: 30px;
    }

    &.align-right,
    &.align-left {
      height: auto;
      max-width: 33%;
    }
  }

  .container {
    .field--name-field-para-simple-body {
      *:last-child {
        margin-bottom: 0;
      }
      
      p, ol li, ul li, li span, li a{
        font-size: 1rem;
      }
      ol{counter-reset: num;
        li{
          &:before{
            counter-increment: num;
            content: counter(num)".";
            position:absolute;
            top:0;
            left:0;
            font-weight: 700;
            font-size: inherit;
          }
          > ol{
            list-style-type: lower-alpha;
            > li{padding-left:0;
              + li{margin-top:10px;}
              &:before{display: none;}
              &::marker{font-weight: 700;}
            }
          }
        }
        &:last-child{
          margin-bottom:70px;
        }
      }
      ul{padding-left: 25px !important;
        li{
          &:before{
            content:'';
            position:absolute;
            top:9px;
            left:0;
            width:5px;
            height:5px;
            border-radius: 100%;
            background: $teachers-bg-grey;
          }
        }
        ul{
          margin-top: 5px;
          li{
            &:before{
              background: transparent;
              border: 1px solid $teachers-bg-grey;
            }
          }
        }
      }
      ul,ol{list-style: none; padding:0;
        li{
          font-size: 1rem; line-height:24px; color:$teachers-bg-grey; position: relative; padding-left:20px;
          p,span,a{font-size: 16px;}
          + li{
            margin-top:20px;
          }
        }
      }
    }
  }
}

